--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -8,11 +8,18 @@
   </script>
   <style>
     input:focus { outline: none; }
+    #btn_group button{
+      border: 1px solid black;
+      background-color: rgba(0,0,0,0);
+      color: black;
+      padding: 5px;
+    }
   </style>
 </head>
 <body>
 
 <h1>렌즈 정확도 측정</h1>
+<div>
 <form action="{% url 'lens:create' %}" method="post">
   {% csrf_token %}
   <table height="80px" border="1px solid black;">
@@ -40,7 +47,10 @@
     </tbody>
   </table>
   <br>
-  <input type="submit" value="정확도 측정">
+  <div id="btn_group">
+    <button type="submit">정확도 측정</button>&nbsp; &nbsp;<button type="reset">새로고침</button>
+  </div>
 </form>
+</div>
 </body>
 </html>
