--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -18,5 +18,9 @@
 </head>
 <body>
   <h1>유플렉스</h1>
+  <div id="btn_group">
+    <button type="button" onClick="location.href='/predict/'"> 정보 입력하여 예측 </button>
+    <button type="button" onClick="location.href='/image/'"> 이미지 넣기 </button>
+  </div>
 </body>
 </html>
