Create image model

--- a/lens/templates/lens/image.html
+++ b/lens/templates/lens/image.html
@@ -1,1 +1,20 @@
-<h1>이미지 업로드</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <style>
+    input:focus { outline: none; }
+    #btn_group button{
+      border: 1px solid black;
+      background-color: rgba(0,0,0,0);
+      color: black;
+      padding: 5px;
+    }
+  </style>
+</head>
+<body>
+  <h1>이미지 넣기</h1>
+  <div id="btn_group">
+    <button type="button" onClick="location.href='/'"> 메인 페이지로 </button>
+  </div>
+</body>
+</html>
