--- a/lens/templates/lens/predict.html
+++ b/lens/templates/lens/predict.html
@@ -48,7 +48,8 @@
   </table>
   <br>
   <div id="btn_group">
-    <button type="submit">정확도 측정</button>&nbsp; &nbsp;<button type="reset">새로고침</button>
+    <button type="submit">정확도 측정</button>&nbsp; &nbsp;<button type="reset">새로고침</button>&nbsp;&nbsp;
+    <button type="button" onClick="location.href='/'"> 메인 페이지로 </button>
   </div>
 </form>
 </div>
