Add image upload function

--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <style>
-    input:focus { outline: none; }
     #btn_group button{
       border: 1px solid black;
       background-color: rgba(0,0,0,0);
@@ -15,7 +14,7 @@
   <h1>유플렉스</h1>
   <div id="btn_group">
     <button type="button" onClick="location.href='/predict/'"> 정보 입력하여 예측 </button>
-    <button type="button" onClick="location.href='/image/'"> 이미지 넣기 </button>
+    <button type="button" onClick="location.href='/image/'"> 렌즈 이미지 예측 </button>
   </div>
 </body>
 </html>
