--- a/lens/templates/lens/predict.html
+++ b/lens/templates/lens/predict.html
@@ -49,7 +49,7 @@
   <br>
   <div id="btn_group">
     <button type="submit">정확도 측정</button>&nbsp; &nbsp;<button type="reset">새로고침</button>&nbsp;&nbsp;
-    <button type="button" onClick="location.href='/'"> 메인 페이지로 </button>
+    <button type="button" onClick="history.back()"> 이전 페이지로 </button>
   </div>
 </form>
 </div>
