--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -11,10 +11,11 @@
   </style>
 </head>
 <body>
-  <h1>유플렉스</h1>
+  <h1>Uplexsoft - 스마트공장</h1>
   <div id="btn_group">
     <button type="button" onClick="location.href='/predict/'"> 정보 입력하여 예측 </button>
     <button type="button" onClick="location.href='/image/'"> 렌즈 이미지 예측 </button>
+    <button type="button" onClick="location.href='/search/'"> 데이터베이스 정보 조회 </button>
   </div>
 </body>
 </html>
