--- a/lens/templates/lens/predict.html
+++ b/lens/templates/lens/predict.html
@@ -28,7 +28,7 @@
         <th width="150px" height="50px" style=" text-align:center;">
           특성
         </th>
-        <th width="300px" height="50px" style="text-align:center;;">
+        <th width="300px" height="50px" style="text-align:center;">
           입력 값
         </th>
       </tr>
