--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load static %} 
 <html>
 <head>
   <style>
@@ -9,9 +10,13 @@
       padding: 5px;
     }
   </style>
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="{% static 'css/lens.css' %}">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-  <h1>Uplexsoft - 스마트공장</h1>
+  <h1><a href="http://www.uplexsoft.com/" class="external_link">Uplexsoft - 스마트공장</a></h1>
   <div id="btn_group">
     <button type="button" onClick="location.href='/predict/'"> 정보 입력하여 예측 </button>
     <button type="button" onClick="location.href='/image/'"> 렌즈 이미지 예측 </button>
