--- a/lens/static/css/lens.css
+++ b/lens/static/css/lens.css
@@ -1,3 +1,16 @@
 h1 a {
-  color: #cf8d19;
+  color: #fcf9f9;
+  font-family: 'Slabo';
+}
+
+.page-header  {
+  background-color: rgb(231, 144, 141);
+  margin-top: 0;
+  padding: 20px 20px 20px 20px;
+}
+
+.page-button  {
+  margin-top: 20;
+  margin-left: 20;
+  padding: 20px 20px 20px 20px;
 }
