Edit model and decision page
Former-commit-id: 4b6e22cd5b05c58703fa6a727380d758eb4a927c

--- a/lens/templates/lens/decision.html
+++ b/lens/templates/lens/decision.html
@@ -16,9 +16,9 @@
 
 <img src="{{image.image.url}}"  width="500px" height="500px"/>
 {% if result == 0 %}
-  <h3>렌즈 불량 유무: 정상</h3>
+  <h3>렌즈 불량 유무: <b style="color: green">정상</b></h3>
 {% else %}
-  <h3>렌즈 불량 유무: 불량</h3>
+  <h3>렌즈 불량 유무: <b style="color: red">불량</b></h3>
 {% endif %}
 <div id="btn_group">
     <button type="button" onClick="history.back()"> 이전 페이지로 </button>
