--- a/lens/templates/lens/result.html
+++ b/lens/templates/lens/result.html
@@ -14,9 +14,9 @@
 <body>
 
 <h1>예측 결과</h1>
-<p> {{ instance.predicted }} </p>
+예측값: <b> {{ instance.predicted }} </b> <br>
 <div id="btn_group">
-  <button type="button" onClick="history.back()"> 이전 페이지로 </button>
+  <br><button type="button" onClick="history.back()"> 이전 페이지로 </button>
 </div>
 </body>
 </html>
