--- a/lens/templates/lens/image.html
+++ b/lens/templates/lens/image.html
@@ -11,7 +11,13 @@ jquery/1.12.0/jquery.min.js"></script>
 		}
 	}
 </script>
+{% load static  %} 
 <html lang="en">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/lens.css' %}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,18 +33,23 @@ jquery/1.12.0/jquery.min.js"></script>
 	  </style>
 </head>
 <body>
-    <h1>이미지 업로드</h1>
-    <form method="post" action="{% url 'lens:decision' %}" enctype="multipart/form-data">
-      {% csrf_token %}
-      <input type="file" name="image" accept="image/*" onchange="readURL(this);" />
-      <br>
-      <img id="img" width="500px" height="500px" />
-      <br>
-      <br>
-			<div id="btn_group">
-      	<button type="submit"> 예측하기 </button>
-				<button type="button" onClick="history.back()"> 이전 페이지로 </button>
-			</div>
-    </form>
+    <div class="page-header">
+      <h1 style="color: white;">제품 이미지 선택</h1>
+    </div>
+    <br>
+    <div style="margin-left: 20px;">
+      <form method="post" action="{% url 'lens:decision' %}" enctype="multipart/form-data">
+        {% csrf_token %}
+        <input type="file" name="image" accept="image/*" onchange="readURL(this);" />
+        <br>
+        <img id="img" width="500px" height="500px" />
+        <br>
+        <br>
+        <div id="btn_group">
+          <button type="submit"> 양불판정 </button>
+          <button type="button" onClick="history.back()"> 이전 페이지로 </button>
+        </div>
+      </form>
+    </div>
 </body>
 </html>
