--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -9,14 +9,14 @@
   <link rel="stylesheet" href="{% static 'css/lens.css' %}">
 </head>
 <div class="page-header">
-  <h1><a href="http://www.uplexsoft.com/" class="external_link">Uplexsoft - 스마트공장</a></h1>
+  <h1><a href="http://www.uplexsoft.com/" class="external_link">Uplexsoft - 지능형 제조 공정.품질관리 서비스</a></h1>
 </div>
 <body>
   {% block content %}
     <div class="page-button">
-      <button type="button" onClick="location.href='/predict/'"> 정보 입력하여 예측 </button>
-      <button type="button" onClick="location.href='/image/'"> 렌즈 이미지 예측 </button>
-      <button type="button" onClick="location.href='/search/'"> 데이터베이스 정보 조회 </button>
+      <button type="button" onClick="location.href='/predict/'"> 검사 합격률 예측 서비스 </button>
+      <button type="button" onClick="location.href='/image/'"> 자동 불량 판별 서비스 </button>
+      <button type="button" onClick="location.href='/search/'"> IoT 데이터 조회 </button>
     </div>
   {% endblock %}
 </body>
