--- a/lens/templates/lens/predict.html
+++ b/lens/templates/lens/predict.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
+{% load static  %} 
 <html>
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/lens.css' %}">
   <script>
       var attributes = ['trt_lot_no', 'prt_lot_no', 'treat.mch_no', 'treat.trt_uptime', 'print.mch_no', 'print.prt_uptime',
         'print.raw_mat', 'print.dry_no', 'print.heat_treat', 'print.prd_type', 'mold.snd_mch_no', 'mold.snd_uptime',
@@ -18,40 +24,45 @@
 </head>
 <body>
 
-<h1>렌즈 정확도 측정</h1>
+<div class="page-header">
+  <h1 style="color: white;">검사 합격률 예측 서비스</h1>
+</div>
 <div>
-<form action="{% url 'lens:create' %}" method="post">
-  {% csrf_token %}
-  <table height="80px" border="1px solid black;">
-    <tbody>
-      <tr>
-        <th width="150px" height="50px" style=" text-align:center;">
-          특성
-        </th>
-        <th width="300px" height="50px" style="text-align:center;">
-          입력 값
-        </th>
-      </tr>
-      <script>
-        for (var i = 0; i < 18; i++){
-          document.write('<tr style="border: solid 1px;">');
-          document.write('<td width="300px" height="50px" style="text-align:center;">');
-          document.write (attributes[i]);
-          document.write ('</td>');
-          document.write('<td width="300px" height="50px" style="text-align:center;">');
-          document.write('<input type="text" name="' + i + '" size="20" style="width:100%; border: 0;">');
-          document.write ('</td>');
-          document.write ('</tr>');
-        }
-      </script>
-    </tbody>
-  </table>
-  <br>
-  <div id="btn_group">
-    <button type="submit">정확도 측정</button>&nbsp; &nbsp;<button type="reset">새로고침</button>&nbsp;&nbsp;
-    <button type="button" onClick="history.back()"> 이전 페이지로 </button>
+<br>
+<div style="margin-left: 20px;">
+  <form action="{% url 'lens:create' %}" method="post">
+    {% csrf_token %}
+    <table height="80px" border="1px solid black;">
+      <tbody>
+        <tr>
+          <th width="150px" height="50px" style=" text-align:center;">
+            특성
+          </th>
+          <th width="300px" height="50px" style="text-align:center;">
+            입력값(Feature)
+          </th>
+        </tr>
+        <script>
+          for (var i = 0; i < 18; i++){
+            document.write('<tr style="border: solid 1px;">');
+            document.write('<td width="300px" height="50px" style="text-align:center;">');
+            document.write (attributes[i]);
+            document.write ('</td>');
+            document.write('<td width="300px" height="50px" style="text-align:center;">');
+            document.write('<input type="text" name="' + i + '" size="20" style="width:100%; border: 0;">');
+            document.write ('</td>');
+            document.write ('</tr>');
+          }
+        </script>
+      </tbody>
+    </table>
+    <br>
+    <div id="btn_group">
+      <button type="submit">합격률 예측</button>&nbsp; &nbsp;<button type="reset">새로고침</button>&nbsp;&nbsp;
+      <button type="button" onClick="history.back()"> 이전 페이지로 </button>
+    </div>
+  </form>
   </div>
-</form>
 </div>
 </body>
 </html>
