--- a/lens/templates/lens/result.html
+++ b/lens/templates/lens/result.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
+{% load static  %} 
 <html>
 <head>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/lens.css' %}">
   <style>
     input:focus { outline: none; }
     #btn_group button{
@@ -12,11 +18,15 @@
   </style>
 </head>
 <body>
-
-<h1>예측 결과</h1>
-예측값: <b> {{ instance.predicted }} </b> <br>
-<div id="btn_group">
-  <br><button type="button" onClick="history.back()"> 이전 페이지로 </button>
+<div class="page-header">
+  <h1 style="color: white;">예측 합격률</h1>
+</div>
+<br> 
+<div style="margin-left: 20px; font-size: large;">
+  예측값: <b> {{ instance.predicted }}% </b> <br>
+  <div id="btn_group">
+    <br><button type="button" onClick="history.back()"> 이전 페이지로 </button>
+  </div>
 </div>
 </body>
 </html>
