--- a/lens/templates/lens/predict.html
+++ b/lens/templates/lens/predict.html
@@ -8,9 +8,9 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/lens.css' %}">
   <script>
-      var attributes = ['trt_lot_no', 'prt_lot_no', 'treat.mch_no', 'treat.trt_uptime', 'print.mch_no', 'print.prt_uptime',
-        'print.raw_mat', 'print.dry_no', 'print.heat_treat', 'print.prd_type', 'mold.snd_mch_no', 'mold.snd_uptime',
-        'mold.snd_raw_mat', 'mold.snd_dry_no', 'mold.snd_heat', 'material.cd_no', 'material.mat_nm', 'material.mat_emit_no']
+      var attributes = ['생산로트', '인쇄로트', '성형 기계번호', '성형 가동시간', '인쇄 기계번호', '인쇄 가동시간',
+        '인쇄 중합체', '인쇄 건조기번호', '인쇄 열처리', '인쇄 제품유형', '샌드위치 기계번호', '샌드위치 가동시간',
+        '샌드위치 중합체', '샌드위치 건조기번호', '샌드위치 열처리', '자재코드', '자재 입고로트', '자재 사출번호']
   </script>
   <style>
     input:focus { outline: none; }
