--- a/lens/templates/lens/search.html
+++ b/lens/templates/lens/search.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
+{% load static  %}
 <html>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="{% static 'css/lens.css' %}">
 <head>
   <style type="text/css">
 		table, tr, td{
@@ -19,8 +25,11 @@
 	</style>
 </head>
 <body>
-
-<h1>데이터베이스 정보 조회</h1>
+<div class="page-header">
+  <h1 style="color: white;">데이터베이스 정보 조회</h1>
+</div>
+<div style="margin-left: 20px;">
+  <br>
   <script>
     var data = JSON.parse("{{ results|escapejs }}");
     for(i = 0; i < data["series"].length; i++) {
@@ -44,10 +53,12 @@
         document.write("</tr>");
       }
       document.write("</table>");
+      document.write("</br>");
     }
   </script>
   <div id="btn_group">
     <br><button type="button" onClick="history.back()"> 이전 페이지로 </button>
   </div>
+</div>
 </body>
 </html>
