--- a/lens/templates/lens/index.html
+++ b/lens/templates/lens/index.html
@@ -15,8 +15,9 @@
   {% block content %}
     <div class="page-button">
       <button type="button" onClick="location.href='/predict/'"> 검사 합격률 예측 서비스 </button>
-      <button type="button" onClick="location.href='/image/'"> 자동 불량 판별 서비스 </button>
+      <button type="button" onClick="location.href='/image/select/'"> 자동 불량 판별 서비스 </button>
       <button type="button" onClick="location.href='/search/'"> IoT 데이터 조회 </button>
+      <button type="button" onClick="location.href='/delete/'"> 저장된 이미지 삭제 </button>
     </div>
   {% endblock %}
 </body>
