--- a/lens/templates/lens/single_image.html
+++ b/lens/templates/lens/single_image.html
@@ -34,7 +34,7 @@ jquery/1.12.0/jquery.min.js"></script>
 </head>
 <body>
     <div class="page-header">
-      <h1 style="color: white;">제품 이미지 선택</h1>
+      <h1 style="color: white;">제품 단일 이미지 선택</h1>
     </div>
     <br>
     <div style="margin-left: 20px;">
@@ -43,11 +43,10 @@ jquery/1.12.0/jquery.min.js"></script>
         <input type="file" name="image" accept="image/*" onchange="readURL(this);" />
         <br>
         <img id="img" width="500px" height="500px" />
-        <br>
-        <br>
+        <br><br>
         <div id="btn_group">
           <button type="submit"> 양불판정 </button>
-          <button type="button" onClick="history.back()"> 이전 페이지로 </button>
+          <button type="button" onClick="history.back()"> 이전 페이지로 </button> <br><br><br>
         </div>
       </form>
     </div>
