--- a/lens/templates/lens/select.html
+++ b/lens/templates/lens/select.html
@@ -7,27 +7,17 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="{% static 'css/lens.css' %}">
-  <style>
-    input:focus { outline: none; }
-    #btn_group button{
-      border: 1px solid black;
-      background-color: rgba(0,0,0,0);
-      color: black;
-      padding: 5px;
-    }
-  </style>
 </head>
-<body>
 <div class="page-header">
-  <h1 style="color: white;">예측 합격률</h1>
+  <h1 style="color: white;">자동 불량 판별 서비스</a></h1>
 </div>
-<br> 
-<div style="margin-left: 20px; font-size: large;">
-  예측값: <b> {{ prediction }}% </b> <br>
-  <div id="btn_group">
-    <br><button type="button" onClick="history.back()"> 이전 페이지로 </button>
-    <button type="button" onClick="location.href='/'"> 메인 페이지로 </button><br><br><br>
-  </div>
-</div>
+<body>
+  {% block content %}
+    <div class="page-button">
+      <button type="button" onClick="location.href='/image/single/'"> 단일 이미지 </button>
+      <button type="button" onClick="location.href='/image/group/'"> 다중 이미지 </button>
+      <button type="button" onClick="history.back()"> 이전 페이지로 </button>
+    </div>
+  {% endblock %}
 </body>
 </html>
