--- a/lens/templates/lens/select.html
+++ b/lens/templates/lens/select.html
@@ -14,8 +14,8 @@
 <body>
   {% block content %}
     <div class="page-button">
-      <button type="button" onClick="location.href='/image/single/'"> 단일 이미지 </button>
-      <button type="button" onClick="location.href='/image/group/'"> 다중 이미지 </button>
+      <button type="button" onClick="location.href='/image/single/'"> 정밀 판정 </button>
+      <button type="button" onClick="location.href='/image/group/'"> 일괄 판정 </button>
       <button type="button" onClick="history.back()"> 이전 페이지로 </button>
     </div>
   {% endblock %}
