--- a/lens/templates/lens/group_images.html
+++ b/lens/templates/lens/group_images.html
@@ -1,48 +1,56 @@
-<html> 
+<html>
   <head>
-    {% load static  %} 
+    {% load static  %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/lens.css' %}">
-    <script> 
-      function setThumbnail(event) { 
-        for (var image of event.target.files) { 
-          var reader = new FileReader(); 
-          reader.onload = function(event) { 
-            var img = document.createElement("img"); 
+    <script>
+      function setThumbnail(event) {
+        let image_container = document.getElementById("image_container");
+        while (image_container.firstChild) {
+          image_container.removeChild(image_container.firstChild);
+        }
+        for (var image of event.target.files) {
+          var reader = new FileReader();
+          reader.onload = function(event) {
+            var img = document.createElement("img");
             img.setAttribute("src", event.target.result);
-            img.setAttribute("width", "100px");
-            img.setAttribute("height", "100px"); 
-            document.querySelector("div#image_container").appendChild(img); 
-          }; 
-          reader.readAsDataURL(image); 
-        } 
-      } 
-    </script>  
-    <meta charset="UTF-8" /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /> 
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />  
-  </head> 
+            img.setAttribute("width", "120px");
+            img.setAttribute("height", "100px");
+            document.querySelector("div#image_container").appendChild(img);
+          };
+          reader.readAsDataURL(image);
+        }
+      }
+
+    </script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  </head>
   <div class="page-header">
     <h1 style="color: white;">제품 다중 이미지 선택</a></h1>
   </div>
   <body>
     <br>
-    <div style="margin-left: 20px; margin-right: 20px;">
-      <form method="post" action="{% url 'lens:decisions' %}" enctype="multipart/form-data">
+    <div style="margin-left: 150px; margin-right: 110px;">
+      <form id="image_form" method="post" action="{% url 'lens:decisions' %}" enctype="multipart/form-data">
         {% csrf_token %}
-        <input type="file" id="images" name="images" accept="image/*" onchange="setThumbnail(event);" multiple/> 
+        <input type="file" id="images" name="images" accept="image/*" onchange="setThumbnail(event);" multiple/>
         <div id="image_container">
         </div>
         <div id="btn_group">
+          <br>
+          판정 모델: &nbsp;&nbsp;
+          <input type="radio" name="model_type" value="SVM">  SVM &nbsp;&nbsp;
+          <input type="radio" name="model_type" value="MLP">  MLP (70개 이상부터 가능)
           <br><br>
           <button type="submit"> 양불판정 </button>
           <button type="button" onClick="history.back()"> 이전 페이지로 </button> <br><br><br>
         </div>
       </form>
     </div>
-  </body> 
+  </body>
 </html>
-
